force/src/objects/Test_Script__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents an executable script for a specific test scenario.</description>
    <fields>
        <fullName>Assumption_del__c</fullName>
        <label>Assumption</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <formula>Request__r.Capability__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_del__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date_del__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defect_Description__c</fullName>
        <label>Defect Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Steps_del__c</fullName>
        <label>Execution Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Results_del__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Input_Data_del__c</fullName>
        <label>Input Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_del__c</fullName>
        <formula>Test_Scenario__r.Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_del__c</fullName>
        <label>Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_Failures_del__c</fullName>
        <label>Test Case Failures</label>
        <summarizedField>Test_Case__c.Execution_failures__c</summarizedField>
        <summaryFilterItems>
            <field>Test_Case__c.Execution_failures__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Case__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <label>Test Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Test_Executions_del__c</fullName>
        <label># of Test Executions</label>
        <summarizedField>Test_Case__c.of_Test_Executions__c</summarizedField>
        <summaryForeignKey>Test_Case__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Test Script</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Scenario__c</columns>
        <columns>Step_del__c</columns>
        <columns>Description__c</columns>
        <columns>Expected_Results_del__c</columns>
        <columns>Request__c</columns>
        <columns>Release_del__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Account_Management</fullName>
        <columns>NAME</columns>
        <columns>Step_del__c</columns>
        <columns>Description__c</columns>
        <columns>Expected_Results_del__c</columns>
        <columns>Comments_del__c</columns>
        <columns>Capability__c</columns>
        <columns>Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Account Management</value>
        </filters>
        <label>Release 3 Account Management Scripts</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Case_Management</fullName>
        <columns>NAME</columns>
        <columns>Step_del__c</columns>
        <columns>Description__c</columns>
        <columns>Expected_Results_del__c</columns>
        <columns>Comments_del__c</columns>
        <columns>Request__c</columns>
        <columns>Capability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>network recruiting</value>
        </filters>
        <label>Release 3 Case Management Scripts</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Lead_Management</fullName>
        <columns>NAME</columns>
        <columns>Step_del__c</columns>
        <columns>Description__c</columns>
        <columns>Expected_Results_del__c</columns>
        <columns>Comments_del__c</columns>
        <columns>Capability__c</columns>
        <columns>Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Lead Management</value>
        </filters>
        <label>Release 3 Lead Management Scripts</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Recruitment_Management</fullName>
        <columns>NAME</columns>
        <columns>Step_del__c</columns>
        <columns>Description__c</columns>
        <columns>Expected_Results_del__c</columns>
        <columns>Request__c</columns>
        <columns>Capability__c</columns>
        <columns>Comments_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>network recruiting</value>
        </filters>
        <label>Release 3 Recruitment Management Scripts</label>
    </listViews>
    <listViews>
        <fullName>Release_4_Pending_Test_Scripts</fullName>
        <columns>NAME</columns>
        <columns>Release_del__c</columns>
        <columns>Request__c</columns>
        <columns>Capability__c</columns>
        <columns>Description__c</columns>
        <columns>Comments_del__c</columns>
        <columns>Test_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>Release 4</value>
        </filters>
        <filters>
            <field>Test_Result__c</field>
            <operation>notEqual</operation>
            <value>Pass</value>
        </filters>
        <label>Release 4 Pending Test Scripts</label>
    </listViews>
    <listViews>
        <fullName>Release_4_Test_Scripts</fullName>
        <columns>NAME</columns>
        <columns>Release_del__c</columns>
        <columns>Request__c</columns>
        <columns>Capability__c</columns>
        <columns>Description__c</columns>
        <columns>Comments_del__c</columns>
        <columns>Test_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>Release 4</value>
        </filters>
        <label>Release 4 Test Scripts</label>
    </listViews>
    <listViews>
        <fullName>Release_5_Test_Scripts</fullName>
        <columns>NAME</columns>
        <columns>Release_del__c</columns>
        <columns>Request__c</columns>
        <columns>Capability__c</columns>
        <columns>Description__c</columns>
        <columns>Comments_del__c</columns>
        <columns>Test_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>Release 5</value>
        </filters>
        <label>Release 5 Test Scripts</label>
    </listViews>
    <listViews>
        <fullName>Release_6_Test_Scripts</fullName>
        <columns>NAME</columns>
        <columns>Release_del__c</columns>
        <columns>Request__c</columns>
        <columns>Capability__c</columns>
        <columns>Description__c</columns>
        <columns>Comments_del__c</columns>
        <columns>Test_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>Release 6</value>
        </filters>
        <label>Release 6 Test Scripts</label>
    </listViews>
    <listViews>
        <fullName>Release_7_Test_Scripts</fullName>
        <columns>NAME</columns>
        <columns>Release_del__c</columns>
        <columns>Request__c</columns>
        <columns>Capability__c</columns>
        <columns>Description__c</columns>
        <columns>Comments_del__c</columns>
        <columns>Test_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_del__c</field>
            <operation>equals</operation>
            <value>Release 7</value>
        </filters>
        <label>Release 7 Test Scripts</label>
    </listViews>
    <nameField>
        <displayFormat>TestScript-{0000000000}</displayFormat>
        <label>Test Script ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>